fix center alignment of header elements

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -231,6 +231,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     padding: 0 40px;
     opacity: 0;
@@ -252,18 +253,21 @@ header h3 {
     animation: h3-animation .5s ease-out;
     animation-delay: 1.2s;
     animation-fill-mode: forwards;
+    position: relative;
 }
 
 .header-bottom {
     position: absolute;
     bottom: 0;
     padding-bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 100%;
     opacity: 0;
     animation: arrow-animation .5s ease-out;
     animation-delay: 2s;
     animation-fill-mode: forwards;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -546,6 +550,7 @@ span.break {
         line-height: 2rem;
         font-size: 1rem;
         letter-spacing: 1rem;
+        left: 10px;
     }
 
     header h3 {
